Add pre-commit and docker-compose configuration
Updated docker-compose to create a container with postgres 17.2 image. Also updated pre-commit file to install some hooks and added some shortcuts into Makefile to make easier interact with the terminal and with the components

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,35 @@
-# Archivos y carpetas de Python
-venv/
+# Python-generated files
 __pycache__/
-*.pyc
-*.pyo
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
 
-# Archivos de entorno
+# Virtual environments
+.venv
+venv
+
+# Django
+media/*
+logs/
+
+# Environments
+env.toml
 .env
 
-# Archivos y carpetas de Django
-db.sqlite3
-/staticfiles/
-/media/
+# IDEs
+.idea/
+.vscode/
 
-# Archivos de dependencias
-*.log
-*.sqlite3
-*.pyc
-.DS_Store
+## MyPy
+.mypy_cache/
 
-# Archivos de Docker
-postgres_data/
+## NPM
+node_modules/
+
+## Docker
+docker
+
+## SQL
+sql
