--- a/static/src/package.json
+++ b/static/src/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "fitomenu",
+  "name": "src",
   "version": "1.0.0",
-  "description": "## Dependencies",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3"
   }
