Adding css compiled from scss and adding pure bootstrap js

--- a/static/src/package.json
+++ b/static/src/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-css": "npx sass scss/main.scss ../css/main.css --style=compressed",
+    "watch-css": "npx sass --watch scss/main.scss:../css/main.css"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3"
+    "bootstrap-icons": "^1.11.3",
+    "sass": "^1.84.0"
   }
 }
