--- a/static/src/package.json
+++ b/static/src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "htmx.org": "^1.9.12",
     "sass": "^1.84.0"
   }
 }
