--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,21 @@ wheels/
 *.egg-info
 
 # Virtual environments
-.venv
-venv
-env
-.env
+.venv/
+venv/
+env/
+.env/
 
 # Django
 media/*
+staticfiles/*
+mediafiles/*
 logs/
 
 # Environments
 env.toml
 .env
+.env.production
 
 # IDEs
 .idea/
