--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
 asgiref==3.8.1
+cfgv==3.4.0
+distlib==0.3.9
 Django==5.1.5
+django-widget-tweaks==1.5.0
 dotenv==0.9.9
+filelock==3.17.0
+identify==2.6.6
+nodeenv==1.9.1
+numpy==2.2.4
+pandas==2.2.3
 pillow==11.1.0
+platformdirs==4.3.6
+pre_commit==4.1.0
+psycopg==3.2.4
 psycopg2==2.9.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
+PyYAML==6.0.2
+six==1.17.0
 sqlparse==0.5.3
+tzdata==2025.2
+virtualenv==20.29.1
+whitenoise==6.9.0
